# libreoffice_ooodev_ext

./: .gitignore  Makefile  README.md  app.py  cspell.json  ooodev.ext.update.xml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/res/defaults/: registrymodifications.xcu
.devcontainer/res/scripts/: lo_console.py
.github/workflows/: python-app-test.yml
macro/: ooodev_ex.py
ooodev_ext/: Addons.xcu  contributors.txt  description.xml  ooodev_ex_runner.py
ooodev_ext/Descriptions/: descr-en.txt
ooodev_ext/pkg-desc/: pkg-description.txt
ooodev_ext/pythonpath/oootest/: testtest.py
oxt/: LICENSE-en.txt  description.xml  job.xcu  ooodev_ex_runner.py  py_runner.py
oxt/___lo_pip___/: basic_config.py  config.py
oxt/___lo_pip___/dialog/: message_dialog.py
oxt/___lo_pip___/dialog/handler/: logger_options.py  options.py  uninstall.py
oxt/___lo_pip___/install/: requirements_check.py
oxt/___lo_pip___/install/pkg_installers/: install_pkg.py  install_pkg_flatpak.py
oxt/___lo_pip___/install/py_packages/: packages.py
oxt/___lo_pip___/oxt_logger/: oxt_logger.py
oxt/___lo_pip___/settings/: load_settings.py  options.py
oxt/config/: config.xcs  config.xcu  options.xcu
oxt/dialogs/: options.xdl  uninstall.xdl
oxt/pkg-desc/: descr-de.txt  descr-en.txt  descr-es.txt  descr-fr.txt
oxt/resources/: pipstrings_de.properties  pipstrings_el.properties  pipstrings_en_US.properties  pipstrings_es.properties  pipstrings_fr.properties  pipstrings_hu.properties  pipstrings_it.properties  pipstrings_ja.properties  pipstrings_ko.properties  pipstrings_nl.properties  pipstrings_pt.properties  pipstrings_zh.properties
src/: build.py  build_args.py  config.py  ext.update.xml  file_util.py
src/processing/: json_config.py  packages.py  token.py  update.py
src/processing/locale/: descriptions.py  publisher_update.py
tests/: conftest.py  test_app_hello.py  test_draw.py
tests/general_tests/: test_packages.py
