[tool.oxt.requirements]
ooo-dev-tools = ">=0.41.0"

[tool.poetry]
name = "OOO Development Tools Extension"
version = "0.41.0"
description = "Template for creating python projects for LibreOffice"
authors = [
    ":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]


[tool.oxt.config]
auto_install_in_site_packages = true
build_dir = "build"
dist_dir = "dist"
install_wheel = false
oxt_name = "OooDev"
py_pkg_dir = "py_pkgs"
token_file_ext = ["txt", "xml", "xcu", "xcs"]
py_pkg_names = []
py_pkg_files = []
update_file = "ooodev.ext.update.xml"
zip_preinstall_pure = true
window_timeout = 5 # number of seconds to wait for window to appear
dialog_desktop_owned = false # determines if the dialog is owned by the desktop window
resource_dir_name = "resources"
resource_properties_prefix = "pipstrings"
default_locale = ["en", "US"]
sym_link_cpython = false # https://tinyurl.com/ymeh4c9j#sym_link_cpython
uninstall_on_update = true # https://tinyurl.com/ymeh4c9j#uninstall_on_update uninstall previous python packages on update

[tool.oxt.token]
pip_wheel_url = "https://files.pythonhosted.org/packages/50/c2/e06851e8cc28dcad7c155f4753da8833ac06a5c704c109313b8d5a62968a/pip-23.2.1-py3-none-any.whl"
test_internet_url = "https://duckduckgo.com"
log_pip_installs = false
lo_identifier = "org.openoffice.extensions.ooodev"
lo_implementation_name = "OooDevRunner"
display_name = "OOO Development Tools"
description = "OOO Development Tools (OooDev) Library for LibreOffice"
publisher = "AmourSpirit"
publisher_url = "https://github.com/Amourspirit/libreoffice_ooodev_ext"
update_url_oxt = "https://raw.githubusercontent.com/Amourspirit/libreoffice_ooodev_ext/main/___dist_dir___/___oxt_name___.oxt"
update_url_xml = "https://raw.githubusercontent.com/Amourspirit/libreoffice_ooodev_ext/main/___dist_dir___/___update_file___"
url_pip = 'https://bootstrap.pypa.io/get-pip.py'
log_file = "ooodev_tools_install.log"
log_name = "OOO PIP Installer"
log_level = "INFO" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_add_console = false # should be false for production
lo_pip = "ooodev_tools_pip"
platform = "all"
startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask
show_progress = true
delay_startup = true # determines if installing waits fo the window to load before installing

[tool.oxt.locale.publisher]
en = { name = "___publisher___", url="___publisher_url___" }

[tool.oxt.locale.name]
en = "___display_name___"

[tool.oxt.locale.desc]
en = "___description___"
af = "Ontwikkelingshulpmiddels (OooDev) Biblioteek vir LibreOffice."
ar = "أدوات التطوير (OooDev) مكتبة لـ LibreOffice."
az = "İnkişaf alətləri (OooDev) LibreOffice üçün kitabxana."
be = "Інструменты распрацоўкі (OooDev) Бібліятэка для LibreOffice."
bg = "Инструменти за разработка (OooDev) Библиотека за LibreOffice."
bn = "উন্নয়ন সরঞ্জাম (OooDev) LibreOffice এর জন্য লাইব্রেরি।"
bs = "Alati za razvoj (OooDev) Biblioteka za LibreOffice."
ca = "Eines de desenvolupament (OooDev) Biblioteca per a LibreOffice."
co = "Strumenti di sviluppu (OooDev) Biblioteca per LibreOffice."
cs = "Vývojové nástroje (OooDev) Knihovna pro LibreOffice."
cy = "Offeri Datblygu (OooDev) Llyfrgell ar gyfer LibreOffice."
da = "Udviklingsværktøjer (OooDev) Bibliotek til LibreOffice."
de = "Entwicklungswerkzeuge (OooDev) Bibliothek für LibreOffice."
el = "Εργαλεία ανάπτυξης (OooDev) Βιβλιοθήκη για το LibreOffice."
es = "Herramientas de desarrollo (OooDev) Biblioteca para LibreOffice."
et = "Arendusvahendid (OooDev) Raamatukogu LibreOffice jaoks."
eu = "Garapen tresnak (OooDev) LibreOffice-ko liburutegia."
fa = "ابزارهای توسعه (OooDev) کتابخانه برای LibreOffice."
fi = "Kehitystyökalut (OooDev) Kirjasto LibreOffice: lle."
fo = "Upprunatól (OooDev) Bókasavn fyri LibreOffice."
fr = "Outil de développement (OooDev) Bibliothèque pour LibreOffice."
ga = "Uirlisí Forbartha (OooDev) Leabharlann do LibreOffice."
gd = "Àrd-ùrlar (OooDev) Leabharlann airson LibreOffice."
gu = "વિકાસ સાધનો (OooDev) LibreOffice માટે લાઇબ્રેરી."
gv = "Co-earrooyn (OooDev) Lioar-lhie er son LibreOffice."
he = "כלי פיתוח (OooDev) ספרייה עבור LibreOffice."
hi = "विकास उपकरण (OooDev) LibreOffice के लिए पुस्तकालय।"
hr = "Razvojni alati (OooDev) Knjižnica za LibreOffice."
hu = "Fejlesztői eszközök (OooDev) Könyvtár a LibreOffice-hoz."
ia = "Instrumentos de disveloppament (OooDev) Bibliotheca pro LibreOffice."
id = "Peralatan Pengembangan (OooDev) Perpustakaan untuk LibreOffice."
is = "Þróunarverkfæri (OooDev) Bókasafn fyrir LibreOffice."
it = "Strumenti di sviluppo (OooDev) Libreria per LibreOffice."
ja = "開発ツール (OooDev) LibreOffice 用ライブラリ。"
kn = "ಅಭಿವೃದ್ಧಿ ಸಾಧನಗಳು (OooDev) LibreOffice ಗಾಗಿ ಗ್ರಂಥಾಲಯ."
ko = "개발 도구 (OooDev) LibreOffice 용 라이브러리."
ku = "Çavkaniyên pêşveçûnê (OooDev) Pirtûka LibreOffice."
la = "Instrumenta progressus (OooDev) Bibliotheca pro LibreOffice."
lt = "Kūrimo įrankiai (OooDev) Biblioteka LibreOffice."
lv = "Izstrādes rīki (OooDev) Bibliotēka LibreOffice."
mg = "Fitadiavana (OooDev) Boky ho an'ny LibreOffice."
ml = "വികസന ഉപകരണങ്ങൾ (OooDev) LibreOffice കുറിപ്പുകൾക്കായി ലൈബ്രറി."
mn = "Хөгжүүлэлтийн багаж (OooDev) LibreOffice-ийн номын сан."
mr = "विकास साधने (OooDev) LibreOffice साठी ग्रंथालय."
ms = "Alat Pembangunan (OooDev) Perpustakaan untuk LibreOffice."
mt = "Għodda ta 'żvilupp (OooDev) Liberarja għal LibreOffice."
nb = "Utviklingsverktøy (OooDev) Bibliotek for LibreOffice."
nl = "Ontwikkeltools (OooDev) Bibliotheek voor LibreOffice."
oc = "Eines de desvolopament (OooDev) Bibliotèca per LibreOffice."
or = "ବିକାଶ ସାଧନ (OooDev) LibreOffice ପାଇଁ ଗ୍ରନ୍ଥାଗାର।"
pa = "ਵਿਕਾਸ ਸੰਦ (OooDev) LibreOffice ਲਈ ਲਾਇਬ੍ਰੇਰੀ।"
pl = "Narzędzia deweloperskie (OooDev) Biblioteka dla LibreOffice."
pt = "Ferramentas de desenvolvimento (OooDev) Biblioteca para LibreOffice."
rm = "Utensils da svilup (OooDev) Biblioteca per LibreOffice."
ro = "Instrumente de dezvoltare (OooDev) Bibliotecă pentru LibreOffice."
ru = "Инструменты разработки (OooDev) Библиотека для LibreOffice."
sc = "Strumentos de svilupu (OooDev) Biblioteca pro LibreOffice."
sk = "Vývojové nástroje (OooDev) Knižnica pre LibreOffice."
sl = "Razvojna orodja (OooDev) Knjižnica za LibreOffice."
sq = "Mjetet e zhvillimit (OooDev) Biblioteka për LibreOffice."
sr = "Алатке за развој (OooDev) Библиотека за LibreOffice."
sv = "Utvecklingsverktyg (OooDev) Bibliotek för LibreOffice."
sw = "Zana za Maendeleo (OooDev) Maktaba kwa LibreOffice."
ta = "மேம்படுத்தும் கருவிகள் (OooDev) LibreOffice க்கான நூலகம்."
te = "అభివృద్ధి సాధనాలు (OooDev) LibreOffice కోసం లైబ్రరీ."
th = "เครื่องมือการพัฒนา (OooDev) ห้องสมุดสำหรับ LibreOffice."
tk = "Ösüş gurallary (OooDev) LibreOffice üçin kitaphana."
tr = "Geliştirme Araçları (OooDev) LibreOffice için Kütüphane."
uk = "Інструменти розробки (OooDev) Бібліотека для LibreOffice."
uz = "Rivojlantirish vositalari (OooDev) LibreOffice uchun kutubxona."
vi = "Công cụ phát triển (OooDev) Thư viện cho LibreOffice."
zh_CN = "开发工具 (OooDev) 适用于 LibreOffice 的库。"
zh_TW = "開發工具 (OooDev) 適用於 LibreOffice 的程式庫。"
zu = "Izinhlelo zokuthuthukiswa (OooDev) Ikheli lase LibreOffice."

[tool.oxt.isolate]
windows = []

[tool.oxt.preinstall.pure]
# verr = ">=1.1.2"

[tool.poetry.dependencies]
python = "^3.8"
ooouno = ">=2.1.2"
ooo-dev-tools = ">=0.41.0"


[tool.poetry.group.dev.dependencies]
types-scriptforge = ">=2.0.1"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"
black = ">=24.3.0"
oooscript = "^1.1.3"
toml = "^0.10.2"
oooenv = "^0.2.2"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extended-select=["ANN", "C4", "N", "SIM", "TCH"]
ignore=[]
show-fixes=true
target="py37"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    no-name-in-module,
    no-self-argument
"""

[tool.pyright]
include = ["src"]
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "skip_headless: skips a test in headless mode",
    "skip_not_headless_os: skips a test in GUI mode for give os"
]
